syntax = "proto3";

option csharp_namespace = "UserInformation";

package user;

service UserInfo {
    rpc GetUserInfo (UserInfoRequest) returns (UserInfoResponse);
    rpc GetListFollower (UserInfoRequest) returns (ListFollowerResponse);
}   

message UserInfoRequest {
    string userId = 1;
}

message UserInfoResponse {
    string userName = 1;
    string email = 2;
    string profilePicture = 3;
}

message FollowerResponse {
    string followId = 1;
}

message ListFollowerResponse {
    repeated FollowerResponse followers = 1;
}